--- a/css/release.css
+++ b/css/release.css
@@ -1775,6 +1775,7 @@ html#page_release #content {
   line-height: 1.2;
   margin-bottom: 10px;
   min-height: 34px;
+  overflow-x: clip;
 }
 
 .page_release .review_header {
